blog/k8s/qa/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-config
              mountPath: /usr/share/nginx/html/env-config.js
              subPath: env-config.js
      volumes:
        - name: env-config
          configMap:
            name: client-env-config
