blog/k8s/qa/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/comments:latest
          ports:
            - containerPort: 4001
