blog/k8s/qa/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/event-bus:latest
          ports:
            - containerPort: 4005
