blog/k8s/qa/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  namespace: qa
  labels:
    app: query

spec:
  replicas: 1
  selector:
    matchLabels:
      app: query

  template:
    metadata:
      labels:
        app: query

    spec:
      containers:
        - name: query
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/query:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
