blog/k8s/qa/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
  namespace: qa
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
