blog/k8s/qa/event-bus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-svc
  namespace: qa
spec:
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
  type: ClusterIP
