blog/k8s/qa/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
  namespace: qa
spec:
  selector:
    app: posts
    color: green
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
