blog/k8s/qa/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-svc
  namespace: qa
spec:
  selector:
    app: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
